--- a/index.html
+++ b/index.html
@@ -43,8 +43,7 @@
         <p class="div_2_zag">Give your team peace of mind with<br>supplemental health insurance from<br>Brella.</p>
         <p class="div_2_podzag">I'm wondering...</p>
         <form action="" method="get">
-            <input name="s" placeholder="how Brella's plan works" type="search" class="div2_poisk_txt">
-            <button type="submit" class="div2_poisk_btn">Find out</button>
+            <input name="s" placeholder="how Brella's plan works" type="search" class="div2_poisk_txt"><button type="submit" class="div2_poisk_btn">Find out</button>
         </form>
         <div class="div_23">
             <div class="div_23_1">
